2012-03-02 arnaud.fontaine
* Do not acquire local roles for Document Component Portal Type.

2012-03-02 arnaud.fontaine
* Likewise Document Component, add SortIndex Property Sheets to Extension Component Portal Type.

2012-02-29 arnaud.fontaine
* Display error messages in Component_view which may have been raised when validating a Component in draft state.

2012-02-29 arnaud.fontaine
* Add portal_components to keep path list.

2012-02-29 arnaud.fontaine
* Add global action to manage ZODB Components.

2012-02-29 arnaud.fontaine
* Do not reset Components on ComponentTool _setObject and _delObject, instead reset in BusinessTemplate to avoid reset being triggered when a new Component is created.

2012-02-28 arnaud.fontaine
* Rename version_priority ERP5Site property to version_priority_list.

2012-02-28 arnaud.fontaine
* Use a ListField for version and proxify error messages field in Component view.

2012-02-28 arnaud.fontaine
* Show Component version on ComponentTool view.

2012-02-28 arnaud.fontaine
* Add Developer Role on portal_components which is the only Role with write permissions on portal_components and subobjects.
* Modify component_validation_workflow to not set Permissions and let it get it from portal_components instead.

2012-02-25 arnaud.fontaine
* Add a Python script which performs the redirect rather than doing it in BusinessTemplate class.
* Rename *MigrateAllComponentFromFilesystem to *MigrateSourceCodeFromFilesystem.

2012-02-25 arnaud.fontaine
* Rename Component modified transition to modify as per naming conventions.

2012-02-25 arnaud.fontaine
* Merge component_interaction_workflow into dynamic_class_generation_interaction_workflow.

2012-02-25 arnaud.fontaine
* Remove useless DocumentConstraint Property Sheet for Document Component.

2012-02-24 arnaud.fontaine
* In Component view, show the error field in the left.

2012-02-24 arnaud.fontaine
* In Component view, display the error field with error CSS class to make it more visible.
