@@ -5,6 +5,9 @@
  <portal_type id="Extension Component">
   <item>SortIndex</item>
  </portal_type>
+ <portal_type id="Test Component">
+  <item>SortIndex</item>
+ </portal_type>
  <portal_type id="Trash Bin">
   <item>Base</item>
   <item>SimpleItem</item>
