@@ -143,4 +143,8 @@
   <type>TALES Constraint</type>
   <workflow>dynamic_class_generation_interaction_workflow</workflow>
  </chain>
+ <chain>
+  <type>Test Component</type>
+  <workflow>component_validation_workflow, dynamic_class_generation_interaction_workflow, edit_workflow</workflow>
+ </chain>
 </workflow_chain>
