@@ -52,12 +52,11 @@
             <key> <string>_body</string> </key>
             <value> <string>template_document_id_list = context.getTemplateDocumentIdList()\n
 template_extension_id_list = context.getTemplateExtensionIdList()\n
-if not (template_document_id_list or template_extension_id_list):\n
+template_test_id_list = context.getTemplateTestIdList()\n
+if not (template_document_id_list or template_extension_id_list or template_test_id_list):\n
   return []\n
 \n
-migrated_component_id_list = template_document_id_list + template_extension_id_list\n
-portal = context.getPortalObject()\n
-component_tool = portal.portal_components\n
+component_tool = context.getPortalObject().portal_components\n
 \n
 from Products.ERP5Type.Document import newTempBase\n
 def addLineListByType(id_list, destination_portal_type, line_list):\n
@@ -76,6 +75,7 @@ def addLineListByType(id_list, destination_portal_type, line_list):\n
 line_list = []\n
 addLineListByType(template_document_id_list, \'Document Component\', line_list)\n
 addLineListByType(template_extension_id_list, \'Extension Component\', line_list)\n
+addLineListByType(template_test_id_list, \'Test Component\', line_list)\n
 return line_list\n
 </string> </value>
         </item>
