@@ -72,6 +72,7 @@
               <list>
                 <string>Document Component</string>
                 <string>Extension Component</string>
+                <string>Test Component</string>
               </list>
             </value>
         </item>
