@@ -1,5 +1,6 @@
 Document Component | SortIndex
 Extension Component | SortIndex
+Test Component | SortIndex
 Trash Bin | Base
 Trash Bin | SimpleItem
 Trash Bin | Task
